@startuml createSubscription
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class SubscriptionController{
    - _repo: ISubscriptionRepositories
    + Update(Guid id, UpdateSubscriptionRequestDTO request): Task<IActionResult>
}

interface ISubscriptionRepositories<<interface>> {
    + CreateSubscription(CreateSubscriptionRequestDTO request): Task<SubscriptionResponseDTO>
}

class SubscriptionRepositories {
    - _dao: SubscriptionDAO
    + Update(Guid requestId, UpdateSubscriptionRequestDTO request): Task<SubscriptionResponseDTO>
}

class SubscriptionDAO {
    - _client.From<Subscriptions> : ISupabaseTable<Subscriptions>
    Update(Guid requestId, UpdateSubscriptionRequestDTO request): Task<SubscriptionResponseDTO>
}

class Subscriptions {
    + Id: Guid
    + Name: string
    + Price: decimal
    + Description: string
    + NumberOfMonths: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

APIGateway -- SubscriptionController
SubscriptionController -- ISubscriptionRepositories
ISubscriptionRepositories <|-- SubscriptionRepositories
SubscriptionRepositories "1"--"1..*" SubscriptionDAO
SubscriptionDAO "1"--"0..*" Subscriptions

@enduml